# rust-multicodec

./: Cargo.toml  README.md  build.rs  table.csv
src/: codec.rs  codec_info.rs  error.rs  lib.rs  mc.rs  table.rs  table_gen.rs
src/serde/: de.rs  mod.rs  ser.rs
