[package]
name = "multicodec"
version = "0.2.18"
edition = "2021"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>", "Dave Huseby <dwh@linuxprogrammer.org>"]
description = "implementing the multicodec spec"
repository = "https://github.com/cryptidtech/rust-multicodec"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["multiformats", "multicodec", "serde"]

[dependencies]
multiutil = { version = "0.1", git="https://github.com/cryptidtech/multiutil.git" }
thiserror = "1.0"

[build-dependencies]
convert_case = "0.6"
csv = "1.3"
serde = "1.0"
serde_derive = "1.0"
