[package]
name = "multicodec"
version = "1.0.0"
edition = "2021"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>", "Dave Grantham <dwg@linuxprogrammer.org>"]
description = "Implementation of the Multicodec specification"
repository = "https://github.com/cryptidtech/rust-multicodec"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["multiformats", "multicodec", "serde"]

[features]
default = ["serde"]

[dependencies]
multitrait = { version = "1.0", git="https://github.com/cryptidtech/multitrait.git" }
serde = { version = "1.0", default-features = false, optional = true, features = ['serde_derive'] }
thiserror = "1.0"

[dev-dependencies]
serde_cbor = "0.11"
serde_json = "1.0"
serde_test = "1.0"

[build-dependencies]
convert_case = "0.6"
csv = "1.3"
serde = "1.0"
serde_derive = "1.0"
